fixed an overflow scroll issue with track searching results

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -940,7 +940,6 @@ textarea
 #stream-wrap
   width: 635px
   position: relative
-  overflow-x: hidden
   &.left
     padding: 8px 0 8px 8px
   &.right
